# glim

./: .clang-format  .dockerignore  .gitignore  .gitmodules  404.html  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  api.html  demo.html  docker-compose.yaml  docker.html  edit.html  extend.html  extensions.html  faq.html  index.html  installation.html  merge.html  mkdocs.yml  package.xml  parameters.html  pyproject.toml  quickstart.html  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  gendoc.yml
cmake/: FindGTSAM.cmake  glim-config.cmake.in
config/: config.json  config_backend.json  config_backend_cpu.json  config_backend_ct.json  config_backend_gpu.json  config_frontend.json  config_frontend_cpu.json  config_frontend_ct.json  config_frontend_gpu.json  config_global.json  config_global_mapping_cpu.json  config_global_mapping_gpu.json  config_global_mapping_pose_graph.json  config_odometry_cpu.json  config_odometry_ct.json  config_odometry_custom.json  config_odometry_gpu.json  config_preprocess.json  config_ros.json  config_sensors.json  config_sub_mapping_cpu.json  config_sub_mapping_gpu.json  config_sub_mapping_passthrough.json  config_viewer.json
config/casbot_localization/: config.json  config_global_mapping_cpu.json  config_odometry_cpu.json  config_preprocess.json  config_prior_map_localization.json  config_ros.json
config/casbot_mapping/: config.json  config_global_mapping_pose_graph.json  config_odometry_gpu.json  config_preprocess.json  config_ros copy.json  config_sensors.json  config_sub_mapping_cpu.json  config_viewer.json
config/mid360_localization/: config.json  config_odometry_cpu.json  config_odometry_ct.json  config_preprocess.json  config_sub_mapping_cpu.json
config/mid360_mapping/: config_global_mapping_gpu.json  config_global_mapping_pose_graph.json  config_logging.json  config_odometry_gpu.json  config_ros.json  config_sub_mapping_passthrough.json
docker/focal/: Dockerfile
docker/focal_llvm/: Dockerfile
docker/jammy/: Dockerfile
docker/jammy_llvm/: Dockerfile
docker/ubuntu/: Dockerfile.gcc  Dockerfile.gcc.cuda  Dockerfile.llvm  Dockerfile.llvm.cuda
docs/: Doxyfile  Makefile  api.md  datasets.md  demo.md  docker.md  edit.md  extend.md  extensions.md  faq.md  index.md  installation.md  merge.md  parameters.md  quickstart.md
docs/css/: custom.css
docs/glim/: glim_localization_proposal.md  offline_viewer_手动回环操作指南.md  summary-globalmap.md  summary-odometry.md  summary-submap.md
docs/隧道巡检/: 详细设计.md
docs_cpp/: annotated.html  async__global__mapping_8hpp_source.html  async__odometry__estimation_8hpp_source.html  async__sub__mapping_8hpp_source.html  callback__slot_8hpp_source.html  classCallbackSlot-members.html  classCallbackSlot.html  classes.html  classglim_1_1AsyncGlobalMapping-members.html  classglim_1_1AsyncGlobalMapping.html  classglim_1_1AsyncOdometryEstimation-members.html  classglim_1_1AsyncOdometryEstimation.html  classglim_1_1AsyncSubMapping-members.html  classglim_1_1AsyncSubMapping.html  classglim_1_1BundleAdjustmentModal-members.html  classglim_1_1BundleAdjustmentModal.html  classglim_1_1CloudCovarianceEstimation-members.html  classglim_1_1CloudCovarianceEstimation.html  classglim_1_1CloudDeskewing-members.html  classglim_1_1CloudDeskewing.html  classglim_1_1CloudPreprocessor-members.html  classglim_1_1CloudPreprocessor.html  classglim_1_1ConcurrentVector-members.html  classglim_1_1ConcurrentVector.html  classglim_1_1Config-members.html  classglim_1_1Config.html  classglim_1_1Config__inherit__graph.map  classglim_1_1Config__inherit__graph.md5  classglim_1_1DataValidator-members.html  classglim_1_1DataValidator.html  classglim_1_1ExtensionModule-members.html  classglim_1_1ExtensionModule.html  classglim_1_1ExtensionModuleROS-members.html  classglim_1_1ExtensionModuleROS2-members.html  classglim_1_1ExtensionModuleROS2.html  classglim_1_1ExtensionModuleROS2__coll__graph.map  classglim_1_1ExtensionModuleROS2__coll__graph.md5  classglim_1_1ExtensionModuleROS__coll__graph.md5  classglim_1_1ExtensionModule__inherit__graph.map  classglim_1_1ExtensionModule__inherit__graph.md5  (+390 more)
docs_cpp/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  (+37 more)
html/: annotated.html  async__global__mapping_8hpp_source.html  async__odometry__estimation_8hpp_source.html  async__sub__mapping_8hpp_source.html  bundle__adjustment__modal_8hpp_source.html  callback__slot_8hpp_source.html  classCallbackSlot-members.html  classCallbackSlot.html  classes.html  classglim_1_1AsyncGlobalMapping-members.html  classglim_1_1AsyncGlobalMapping.html  classglim_1_1AsyncOdometryEstimation-members.html  classglim_1_1AsyncOdometryEstimation.html  classglim_1_1AsyncSubMapping-members.html  classglim_1_1AsyncSubMapping.html  classglim_1_1BundleAdjustmentModal-members.html  classglim_1_1BundleAdjustmentModal.html  classglim_1_1CloudCovarianceEstimation-members.html  classglim_1_1CloudCovarianceEstimation.html  classglim_1_1CloudDeskewing-members.html  classglim_1_1CloudDeskewing.html  classglim_1_1CloudPreprocessor-members.html  classglim_1_1CloudPreprocessor.html  classglim_1_1ConcurrentVector-members.html  classglim_1_1ConcurrentVector.html  classglim_1_1Config-members.html  classglim_1_1Config.html  classglim_1_1Config__inherit__graph.map  classglim_1_1Config__inherit__graph.md5  classglim_1_1DataValidator-members.html  classglim_1_1DataValidator.html  classglim_1_1ExtensionModule-members.html  classglim_1_1ExtensionModule.html  classglim_1_1ExtensionModuleROS-members.html  classglim_1_1ExtensionModuleROS.html  classglim_1_1ExtensionModuleROS2-members.html  classglim_1_1ExtensionModuleROS2.html  classglim_1_1ExtensionModuleROS2__coll__graph.map  classglim_1_1ExtensionModuleROS2__coll__graph.md5  classglim_1_1ExtensionModuleROS__coll__graph.map  (+389 more)
search/: search_index.json
(+280 files in other folders)
