<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glim</name>
  <version>1.0.7</version>
  <description>3D LiDAR-IMU mapping framework</description>
  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>
  <license>MIT</license>

  <depend>fmt</depend>
  <depend>spdlog</depend>
  <depend>gtsam</depend>
  <depend>gtsam_points</depend>
  <depend>iridescence</depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
